fix scrollbar

--- a/ui/styles.css
+++ b/ui/styles.css
@@ -113,7 +113,7 @@ ul h3 { margin-bottom: 5px; padding-bottom: 0; }
 
  /* width */
 ::-webkit-scrollbar {
-  width: 30px;
+  width: 12px;
 }
 
 /* Track */
